fix: sidenav content overflow
Update styles to fix issue with sidenav content overflowing over and past the footer.

--- a/projects/documentation/src/app/widgets/layout/layout/layout.component.scss
+++ b/projects/documentation/src/app/widgets/layout/layout/layout.component.scss
@@ -7,3 +7,8 @@
     position: -webkit-sticky;
     top: 64px;
 }
+
+.sticky-content {
+    height: auto;
+    overflow-y: auto;
+}
